# Amazons

epfu20s-101-f-amazons-NEW_TEAM/: README.md
epfu20s-101-f-amazons-NEW_TEAM/doc/: autonomous.drawio  flow-chart (2).drawio
epfu20s-101-f-amazons-NEW_TEAM/src/: interactiveGame.c
epfu20s-101-f-amazons-NEW_TEAM/src new/Amazon/amazons/: README.md  amazons.cbp  amazons.depend  amazons.layout  autonomous.h  getline.h  interactive.h  main.c  state_m1.txt  state_m2.txt  state_p1.txt  state_p2.txt  state_p3.txt
epfu20s-101-f-amazons-NEW_TEAM/src/Interactive TUI/: CMakeLists.txt  board.txt  interactiveGame.c
epfu20s-101-f-amazons-NEW_TEAM/src/Interactive TUI/Board/: boardUtils.c  boardUtils.h
epfu20s-101-f-amazons-NEW_TEAM/src/Interactive TUI/Moves/: movesPossibility.c  movesPossibility.h  movesUtils.c  movesUtils.h
epfu20s-101-f-amazons-NEW_TEAM/src/Interactive TUI/Players/: playersUtils.c  playersUtils.h
epfu20s-101-f-amazons-NEW_TEAM/src/Interactive TUI/UTILS/: IOUtils.c  IOUtils.h  constants.h  structs.h
